Closed Bug 1696229 Opened 4 years ago Closed 4 years ago

Don't report wrong errors for expanded principals in CheckLoadURIWithPrincipal

Categories

(Core :: Security: CAPS, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: evilpies, Assigned: evilpies)

Details

Attachments

(1 file)

I noticed this while working on bug 1536094. We should not report an error unless all expanded principals fail the CheckLoadURIWithPrincipal function.

Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Pushed by evilpies@gmail.com: https://hg.mozilla.org/integration/autoland/rev/6b5d21ddd391 Don't report wrong errors for expanded principals in CheckLoadURIWithPrincipal. r=ckerschb
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: